--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "",
 	"main": "main.js",
 	"scripts": {
-		"start": "electron ."
+		"start": "electron .",
+		"watch": "nodemon --exec electron ."
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"electron": "^23.1.3"
-	},
-	"dependencies": {}
+		"electron": "^23.1.3",
+		"nodemon": "^2.0.21"
+	}
 }
